# fysisk-biokemi

./: .gitignore  .gitlab-ci.yml  Makefile  README.md  _quarto-master.yml  _quarto-site-master.yml  _quarto-site-portal.yml  _quarto-site-student.yml  _quarto-student.yml  _quarto.yml  datasets.qmd  index.qmd  pixi.toml  pyproject.toml
.github/workflows/: package-wheel.yml  pages.yml
built_notebooks/master/: colab_intro.ipynb  notebook_1.ipynb  notebook_2.ipynb  notebook_3.ipynb  notebook_4.ipynb  notebook_5.ipynb  notebook_6.ipynb  self_study_1.ipynb  week_43.ipynb  week_44.ipynb  week_45.ipynb  week_46.ipynb  week_47.ipynb  week_48.ipynb  week_49.ipynb
built_notebooks/student/: colab_intro.ipynb  notebook_1.ipynb  notebook_2.ipynb  notebook_3.ipynb  notebook_4.ipynb  notebook_5.ipynb  notebook_6.ipynb  self_study_1.ipynb  week_43.ipynb  week_44.ipynb  week_45.ipynb  week_46.ipynb  week_47.ipynb  week_48.ipynb  week_49.ipynb
cheatsheet/: _quarto.yml  cheatsheet.qmd
cheatsheet/styles/: cheatsheet.scss
course/: .gitignore  Makefile  _quarto-site-master.yml  _quarto-site-student.yml  _quarto-typst.yml  _quarto.yml  authoring.md  datasets.qmd  index.ipynb
course-utils/: README.md  pyproject.toml
course-utils/src/fysisk_biokemi/: __init__.py
course-utils/src/fysisk_biokemi/datasets/: load_dataset.py  make_reversible_reaction_dataset.py
course-utils/src/fysisk_biokemi/datasets/files/: adp-bindin-pyruva-kinase.csv  analys-data-set-obeyin.xlsx  binding_data_sq.xlsx  chlorophyll_adsorption.xlsx  design-enzyme-kineti-exper.xlsx  deter-reacti-order-activ.csv  deter_delta_h_data.xlsx  dialys-exper.xlsx  enzyme-behav-atcase.csv  exp_decay_data.xlsx  inter-bindin-data.xlsx  protei-blood-plasma.xlsx  reverse_reaction.xlsx  trypt-absor-fluor-emission.xlsx  trypt-absor-fluor-extinction.xlsx  trypt-absor-fluor-ph2.xlsx  trypt-absor-fluor-ph7.xlsx  uv-spec-apo-holo-myo.csv
course-utils/src/fysisk_biokemi/datasets/files/archive/: chlorophyll_adsorption.txt  week47_1_tryp_all.xlsx
course-utils/src/fysisk_biokemi/utils/: design_enzyme_kineti_exper.py
course-utils/src/fysisk_biokemi/utils/make_pdf/: notebook_retrieval.py
course-utils/src/fysisk_biokemi/widgets/: __init__.py  concentration_unit.py  data_uploader.py  dilution_helper.py  interactive_plot.py  molecular_weight.py  reaction_equation.py  sequence_properties.py  text.txt
course-utils/src/fysisk_biokemi/widgets/utils/: __init__.py  atomic_weigets.py  colab.py  misc.py
course/lessons/: check_exercise_inclusion.py  colab_intro.qmd  week_43.qmd  week_44.qmd  week_45.qmd  week_46.qmd  week_47.qmd  week_48.qmd
course/lessons/exercises/: adp-bindin-pyruva-kinase.qmd  analys-data-set-obeyin.qmd  analys-rever-reacti.qmd  atp_hydrolysis.qmd  averag-prope-amino-acids.qmd  compe-ligand-bind.qmd  design-enzyme-kineti-exper.qmd  deter-reacti-order-activ-v1.qmd  deter-reacti-order-activ.qmd  deter-reacti-orders-v1.qmd  deter-reacti-orders.qmd  deter-type-streng-coope.qmd  deter_deltah_for_react.qmd  dialys-exper.qmd  diff_q_keq.qmd  enzyme-behav-atcase.qmd  enzyme-inhib-i.qmd  enzyme-inhib-ii.qmd  estim-bindin-affini.qmd  extin-coeff-human-myogl.qmd  inter-bindin-data.qmd  lab_exercise.qmd  michaelis-menten.qmd  protei-blood-plasma.qmd  quali-descr-michae-kineti.qmd  rename.py  snake-dependent-enzyme.qmd  the-fluor-protei-mcherr.qmd  the-ph-effect-active.qmd  tricky-binding.qmd  trypt-absor-fluor.qmd  uv-spec-apo-holo-myo.qmd
course/lessons/intros/: calculation_intro.qmd  plotting_intro.qmd  regression_intro.qmd
course/lessons/old/: notebook_1.qmd  notebook_2.qmd  notebook_3.qmd  notebook_4.qmd  notebook_5.qmd  notebook_6.qmd
course/lessons/self_study/: calculations.qmd  dataset.qmd  parentheses.qmd
course/redirect/: index.html
crash_course/: _quarto.yml  custom.scss  python_crash_course.html  python_crash_course.qmd
filters/: strip-exercise.lua  strip-solution.lua
lessons/: TE_1.qmd  check_exercise_inclusion.py  notebook_1.qmd  notebook_2.qmd  notebook_3.qmd  notebook_4.qmd  notebook_5.qmd  notebook_6.qmd  self_study_1.qmd  test.ipynb  week_1_1.qmd  week_43.qmd  week_44.qmd  week_45.qmd  week_46.qmd  week_47.qmd  week_48.qmd  week_49.qmd
lessons/exercises/: analys-data-set-obeyin.qmd  averag-prope-amino-acids.qmd  calculation-data_protei-blood-plasma.qmd  calculation-functions_extin-coeff-human-myogl.qmd  calculation_compe-ligand-bind.qmd  data-plot-regression_adp-bindin-pyruva-kinase.qmd  data-plotting-regression_deter-reacti-order-activ.qmd  design-enzyme-kineti-exper.qmd  deter-reacti-order-activ.qmd  deter-reacti-orders.qmd  deter-type-streng-coope.qmd  deter_deltah_for_react.qmd  enzyme-behav-atcase.qmd  enzyme-inhib-i.qmd  inter-bindin-data.qmd  michaelis-menten.qmd  reorganize.py  trypt-absor-fluor.qmd  uv-spec-apo-holo-myo.qmd
lessons/intros/: calculation_intro.qmd  plotting_intro.qmd  regression_intro.qmd
lessons/old/: notebook_1.qmd  notebook_3.qmd  notebook_5.qmd  notebook_6.qmd
lessons/self_study/: functions_arrays.qmd  parentheses.qmd
lessons/tidbits/: _install_import.qmd
lessons/week_48/: week_48_2.qmd  week_48_3.qmd  week_48_4.qmd
master/: datasets.html  datasets.ipynb  index.html  index.ipynb  search.json
master/lessons/: colab_intro.ipynb  self_study_1.html  self_study_1.ipynb  week_44.html  week_44.ipynb  week_45.html  week_45.ipynb  week_46.html  week_46.ipynb  week_47.html  week_47.ipynb  week_48.html  week_48.ipynb
notes/: git.md
quizzes/: quiz_1.qmd  quiz_2.qmd
scripts/: master_post.py  student_post.py  student_pre.py
src/fysisk_biokemi/: __init__.py
src/fysisk_biokemi/quiz/: __init__.py  (+1 more)
student/: datasets.html  datasets.ipynb  index.html  index.ipynb  listings.json  search.json
student/lessons/: colab_intro.html  colab_intro.ipynb  self_study_1.html  self_study_1.ipynb  week_44.html  week_44.ipynb  week_45.html  week_45.ipynb  week_46.html  week_46.ipynb  week_47.html  week_47.ipynb  week_48.html  week_48.ipynb
templates/: dual-links.ejs
wheels/: fysisk_biokemi-0.1.0-py3-none-any.whl  fysisk_biokemi-0.2.0-py3-none-any.whl  fysisk_biokemi-0.2.1-py3-none-any.whl
(+91 files in other folders)
