[project]
name = "fysisk-biokemi"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Mads-Peter", email = "machri@phys.au.dk" }
]
requires-python = ">=3.11"
dependencies = [
    "anywidget>=0.9.18",
    "plotly>=6.3.0",
    "scipy>=1.16.2",
]

[project.optional-dependencies]
standard = [
    "jupyter>=1.1.1",
    "jupyter-cache>=1.0.1",
    "jupyterquiz>=2.9.6.2",
    "matplotlib>=3.10.6",
    "numpy>=2.3.3",
    "openpyxl>=3.1.5",
    "pandas>=2.3.2",
    "ipywidgets==7.7.1",
    "anywidget>=0.9.18",
    "plotly>=6.3.0",

]
colab = [
    "jupyter",
    "jupyter-cache",
    "jupyterquiz",
    "matplotlib",
    "numpy",
    "openpyxl",
    "pandas",
    "ipywidgets==7.7.1",
    "anywidget",
    "plotly",

]

[project.scripts]
fysisk-biokemi = "fysisk_biokemi:main"

[build-system]
requires = ["uv_build>=0.8.10,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "nbformat>=5.10.4",
]

