[project]
name = "fysisk-biokemi"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Mads-Peter", email = "machri@phys.au.dk" }
]
requires-python = ">=3.11"
dependencies = [
    "anywidget>=0.9.18",
    "biopython>=1.85",
    "plotly>=6.3.0",
    "scipy>=1.16.2",
]

[project.optional-dependencies]
standard = [
    "jupyter>=1.1.1",
    "jupyter-cache>=1.0.1",
    "jupyterquiz>=2.9.6.2",
    "matplotlib>=3.10.6",
    "numpy>=2.3.3",
    "openpyxl>=3.1.5",
    "pandas>=2.3.2",
    "ipywidgets==7.7.1",
    "anywidget>=0.9.18",
    "plotly>=6.3.0",

]
colab = [
    "jupyter",
    "jupyter-cache",
    "jupyterquiz",
    "matplotlib",
    "numpy",
    "openpyxl",
    "pandas",
    "ipywidgets==7.7.1",
    "anywidget",
    "plotly",

]

[project.scripts]
fysisk-biokemi = "fysisk_biokemi:main"

[build-system]
requires = ["uv_build>=0.8.10,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "nbformat>=5.10.4",
]


[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["osx-arm64", "osx-64", "linux-64", "win-64"]

[tool.pixi.pypi-dependencies]
fysisk-biokemi = { path = ".", editable = true }

[tool.pixi.environments]
default = { solve-group = "default" }
colab = { features = ["colab"], solve-group = "default" }
dev = { features = ["dev"], solve-group = "default" }
standard = { features = ["standard"], solve-group = "default" }

[tool.pixi.tasks.preview]
args = [{ "arg" = "mode", default = "master", choices=["student", "master"]}]
cmd = "quarto preview --profile site-{{mode}}"
cwd = "course"
description = "Preview the course notes in either student or master mode"
default-environment = "standard"

[tool.pixi.tasks.render]
args = [{ "arg" = "mode", default = "master", choices=["student", "master"]}]
cmd = "quarto render --profile site-{{mode}}"
cwd = "course"
description = "Render the course notes in either student or master mode"
default-environment = "standard"

[tool.pixi.tasks.render-all]
depends-on = ["_clean",
            {task = "render", args=["student"]},
            {task = "render", args=["master"]}, 
            "_move-index"]
description = "Clean and render the course notes in both student and master mode"

[tool.pixi.tasks]
_clean = { cmd = ["rm", "-rf", "course_notes/_site"], description = "Clean the rendered course notes"}
_move-index = { cmd = "cp redirect/index.html _site-combined/index.html", cwd = "course", description = "Move the index.html to the combined site"}

[tool.pixi.dependencies]
quarto = ">=1.8.27,<2"
python = "3.12.*"

